# page-gfx-wgpu-tech-demos

./: Cargo.toml  build_both_backends.sh  build_webgpu.sh  index.html
src/: lib.rs
src/demos/: mod.rs  one_shot_scene.rs  test.rs  update_scene.rs
src/demos/level2/: mod.rs  ray_tracing.rs  ray_tracing.wgsl  shadow.rs  spatial_hashing.rs  union_paint.rs
src/demos/level2/ray_tracing/: octree.rs  rever_cube.rs
src/demos/level2/shadow/: depth_texture.rs  example.wgsl  offical_example.rs  plane.rs  world.rs
src/demos/level2/spatial_hashing/: compute.wgsl  draw.wgsl  entity.rs  sapce.rs
src/demos/update_scene/: object.rs  paint.rs  shadow.rs  triangle_list_render.rs  vr.rs  world.rs
src/shaders/: boids.wgsl  fluid.wgsl
src/shared/: mod.rs  ready_paint.rs
src/utils/: mod.rs  shader_debug.rs
src/web/: bridge_canvas.rs  interactions.rs  mod.rs
static/: README.md
static/css/: main.css
static/fonts/: .gitkeep
static/images/: .gitkeep
