[package]
name = "page-shader-tech"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.25.0"

[dependencies]
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
console_error_panic_hook = "0.1.6"
env_logger = "0.9.1"
image = { version = "0.24.4", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.17"
pollster = "0.2.5"
tobj = { version = "3.2.1", features = ["async"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
wgpu = "24.0.1"
once_cell = "1.21.1"
glam = "0.30.0"

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
reqwest = { version = "0.11" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGl2RenderingContext",
    "GpuAdapter",
    "GpuBuffer",
    "GpuCommandEncoder",
    "GpuDevice",
    "GpuQueue",
    "GpuRenderPipeline",
    "GpuTexture",
    "GpuTextureView",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "Performance",
    "PerformanceTiming",
    "EventTarget",
    "Event",
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "OscillatorNode",
    "GainNode",
    "ImageData",
    "HtmlImageElement",
    "Response",
    "RequestInit",
    "Headers",
    "console",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "DomMatrix",
    "Touch",
    "TouchEvent",
    "TouchList",
    "ResizeObserver",
    "ResizeObserverEntry"
] }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
name = "page_shader_tech"
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]
webgl = ["wgpu/webgl"]
webgpu = []
